--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -13,7 +13,8 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
-        
+        <header class="header">
+            Hello there
+        </header>        
     </body>
 </html>
